converts to 19.05x19.05mm

--- a/1u/panelized/kikit_config.json
+++ b/1u/panelized/kikit_config.json
@@ -1,14 +1,10 @@
 {
     "layout": {
-        "vspace": "2mm",
         "rows": "4",
         "cols": "5"
     },
-    "source": {
-        "tolerance": "15mm"
-    },
     "tabs": {
-        "type": "annotation"
+        "type": "full"
     },
     "cuts": {
         "type": "mousebites"
